examples/datalog/15_arithmetic/21_division_truncation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_div_trunc
Knowledge graph 'test_div_trunc' created.
Switched to knowledge graph: test_div_trunc
> .kg use test_div_trunc
Switched to knowledge graph: test_div_trunc
> +vals[(7,), (10,), (15,), (-7,), (-10,)].
Inserted 5 fact(s) into 'vals'.
> int_div(X, Y) :- vals(X), Y = X / 3.
Script error: Query execution failed: Unsafe rule: Atom { relation: "int_div", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
